<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/listChatFragment"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/callFragment"
        android:icon="@drawable/ic_baseline_announcement_24"
        android:title="@string/menu_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_baseline_folder_copy_24"
        android:title="@string/menu_contacts"
        app:showAsAction="always" />
    <item
        android:id="@+id/storyFragment"
        android:icon="@drawable/ic_baseline_folder_copy_24"
        android:title="@string/menu_story"
        app:showAsAction="always" />

</menu>